--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,14 +1,12 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../newStyle.css">
-		<title>Add Bucket Item
-		</title>
+		<title> Add Bucket Item </title>
 	</head>
     
 	<body>
@@ -30,7 +28,7 @@
 		<div class="content1">
 		<h1 class = "formHeader"> WHAT BUCKET LIST ITEM(S) DO YOU HAVE?</h1>
 		<form action="/seasons" method="POST">
-            <h3 class = "subHeader"> * SELECT THE SEASON IN WHICH YOU PLAN TO COMPLETE YOUR BUCKET LIST ITEM(S) *</h3>
+            <h3 class = "subHeader"> * SELECT THE SEASON IN WHICH YOU PLAN TO COMPLETE YOUR BUCKET LIST ITEM(S) * </h3>
             <input type="radio" name="season" value="Summer"/><h3 class = "radioSeason"> Summer </h3>
             <input type="radio" name="season" value="Fall"/> <h3 class = "radioSeason"> Fall </h3>
             <input type="radio" name="season" value="Winter"/> <h3 class = "radioSeason"> Winter </h3>
