wip: fixed nav styling, adjusted schema + placeholder

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -15,13 +15,13 @@
         </header>
      <nav class="nav-bar">
         <ul class ="navBarContainer">
-            <li class="navItems"><a class="navLinks" href="/seasons">Home</a></li>
-            <li class="navItems"><a class="navLinks" href="#">About</a></li>
-            <li class="navItems"><a class="navLinks" href="/seasons/new">Add a Bucket List Item</a></li>
-            <li id="summerNav"><a class="navLinks" href="/seasons/summer">Summer</a></li>
-            <li id="fallNav"><a class="navLinks" href="/seasons/fall">Fall</a></li>
-            <li id="winterNav"><a class="navLinks" href="/seasons/winter">Winter</a></li>
-            <li id="springNav"><a class="navLinks" href="/seasons/spring">Spring</a></li>
+            <li class="navItems"><a class="navLinks" href="/seasons">HOME</a></li>
+            <li class="navItems"><a class="navLinks" href="#">ABOUT</a></li>
+            <li class="navItems"><a class="navLinks" href="/seasons/new">ADD A BUCKET LIST ITEM</a></li>
+            <li id="summerNav"><a class="navLinks" href="/seasons/summer">SUMMER</a></li>
+            <li id="fallNav"><a class="navLinks" href="/seasons/fall">FALL</a></li>
+            <li id="winterNav"><a class="navLinks" href="/seasons/winter">WINTER</a></li>
+            <li id="springNav"><a class="navLinks" href="/seasons/spring">SPRING</a></li>
         </ul>
      </nav>
     <div class="content1">
@@ -42,6 +42,10 @@
         <br />
         <input type="submit" value="Submit Changes" />
     </form>
+    <footer class="footer"> 	
+
+        <%- include('./partials/footer.ejs')%>
+  </footer>
 </body>
 
 </html>
