--- a/views/new.ejs
+++ b/views/new.ejs
@@ -16,13 +16,13 @@
 		 </header>
 		 <nav class="nav-bar">
 			<ul class ="navBarContainer">
-				<li class="navItems"><a class="navLinks" href="/seasons">Home</a></li>
-				<li class="navItems"><a class="navLinks" href="#">About</a></li>
-				<li class="navItems"><a class="navLinks" href="/seasons/new">Add a Bucket List Item</a></li>
-				<li id="summerNav"><a class="navLinks" href="/seasons/summer">Summer</a></li>
-				<li id="fallNav"><a class="navLinks" href="/seasons/fall">Fall</a></li>
-				<li id="winterNav"><a class="navLinks" href="/seasons/winter">Winter</a></li>
-				<li id="springNav"><a class="navLinks" href="/seasons/spring">Spring</a></li>
+				<li class="navItems"><a class="navLinks" href="/seasons">HOME</a></li>
+				<li class="navItems"><a class="navLinks" href="#">ABOUT</a></li>
+				<li class="navItems"><a class="navLinks" href="/seasons/new">ADD A BUCKET LIST ITEM</a></li>
+				<li id="summerNav"><a class="navLinks" href="/seasons/summer">SUMMER</a></li>
+				<li id="fallNav"><a class="navLinks" href="/seasons/fall">FALL</a></li>
+				<li id="winterNav"><a class="navLinks" href="/seasons/winter">WINTER</a></li>
+				<li id="springNav"><a class="navLinks" href="/seasons/spring">SPRING</a></li>
 			</ul>
 	</nav>
 		<div class="content1">
@@ -41,7 +41,7 @@
 			<h3 id = "imageAttr">IMAGE:</h3>
 			<input type="text" name="img" placeholder="Input an Image URL" /><br />
 			<h3 id = "priceAttr">PRICE:</h3>
-			<input type="text" name="price" placeholder="Input a Price * MUST BE A NUMBER i.e 100 *"/><br />
+			<input type="text" name="price" placeholder="Input a Price * i.e $50 *"/><br />
       <h3 id = "completedAttr">COMPLETED:</h3>
 			<input type="checkbox" name="completed" /><br />
 			<input type="submit" name="" value="ADD ITEM" />
